added analysis and LFS tracking

--- a/notebooks/1.1-drm-inspection&cleaning.ipynb
+++ b/notebooks/1.1-drm-inspection&cleaning.ipynb
@@ -14,7 +14,7 @@
     "import polars as pl\n",
     "\n",
     "df = pl.read_parquet('../data/raw/arxiv-abstracts.parquet', columns=['id', 'authors', 'title', 'abstract'])\n",
-    "# df = df.sample(n=50_000, with_replacement=False, seed=124)\n",
+    "df = df.sample(n=500_000, with_replacement=False, seed=124)\n",
     "# df = pl.read_parquet('../data/raw/arxiv-abstracts.parquet', columns=['id', 'authors', 'title', 'abstract'])\n"
    ],
    "outputs": [],
